# workshop-build-an-agent

./: README.md  postBuild.bash  preBuild.bash  pyproject.toml  requirements.txt  secrets.env.example  variables.env
.github/workflows/: cpu-smoke.yml
.project/: brev.nvwb-startup.sh  configpacks  spec.yaml
code/3-agent-evaluation/: evaluate_rag_agent.answers.ipynb  evaluate_rag_agent.ipynb  evaluate_report_agent.answers.ipynb  evaluate_report_agent.ipynb  generate_rag_eval_dataset.ipynb  generate_report_eval_dataset.ipynb
code/4-agent-customization/: 01_synthetic_data_generation.ipynb  02_grpo_training.ipynb  03_run_agent.ipynb  README.md  bash_agent.ipynb  pyproject.toml
code/4-agent-customization/answer_key/: 01_synthetic_data_generation.answers.ipynb  03_run_agent.answers.ipynb  bash_agent.answers.ipynb
code/4-agent-customization/bash_agent/: config.py  helpers.py  main_hf.py
code/secrets_management/: secrets_management_1.ipynb  secrets_management_2.ipynb  secrets_management_3.ipynb  secrets_management_4.ipynb  secrets_management_5.ipynb  secrets_management_6.ipynb  secrets_management_master.ipynb
scripts/: setup-gpu-training.sh
tests/: test_cpu_runtime.py
