[project]
name = "workshop-build-an-agent"
version = "1.0.0"
description = "CPU/API-first environment for the Build An Agent Workshop"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "data-designer~=0.3.7",
    "deepagents>=0.3.11",
    "duckdb~=1.4.4",
    "dotenv~=0.9.9",
    "faiss-cpu~=1.12.0",
    "fastapi~=0.116.1",
    "ipywidgets~=8.1.7",
    "jupyter-app-launcher>=0.1.0",
    "jupyterlab-git>=0.44.0",
    "jupyterlab>3.0",
    "langchain-nvidia-ai-endpoints>1,<2",
    "langchain-openai>1,<2",
    "langchain>1,<2",
    "langchain-classic>=1.0.0",
    "langchain_mcp_adapters~=0.2.1",
    "langgraph-cli[inmem]",
    "langgraph>1,<2",
    "langsmith~=0.3.0",
    "nemo-microservices~=1.3.0",
    "openai>=1,<2",
    "pandas~=2.3.0",
    "pydantic",
    "ragas~=0.2.0",
    "scikit-learn~=1.6.0",
    "streamlit~=1.49.1",
    "tavily-python~=0.7.19",
    "voila",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
