[project]
name = "agent-customization"
version = "1.0.0"
description = "Module 4: API-first agent customization with an optional GPU GRPO track"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Data generation
    "data-designer>=0.3.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.0.0",
    # NeMo Gym resource server
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "openai>=1,<2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
training = [
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "torch==2.10.0",
    "transformers==5.5.0",
    "trl==0.24.0",
    "triton>=3.0.0",
    "unsloth==2026.4.4",
    "unsloth-zoo==2026.4.6",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["nemo_gym_resources/langgraph_cli/tests"]
asyncio_mode = "auto"
